# liteswarm

./: .cz.yaml  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: publish.yml
docs/: advanced.md  api.md  contributing.md  examples.md  index.md
examples/calculator/: run.py
examples/chat_api/client/: run.py
examples/chat_api/server/: agents.py  app.py  run.py
examples/chat_basic/lite_chat/: run.py
examples/chat_basic/lite_team_chat/: run.py
examples/chat_client/: run.py
examples/chat_example/: example_chat.py  example_team_chat.py  run.py
examples/chat_server/: app.py  run.py
examples/context_variables/: run.py
examples/mobile_app/: run.py
examples/parallel_research/: run.py
examples/repl/: run.py
examples/software_team/: agents.py  handlers.py  planner.py  planning.py  run.py  stream.py  tasks.py  team.py  templates.py  types.py  utils.py
examples/structured_outputs/: handlers.py  repl.py  run.py  strategy.py  stream.py  types.py  utils.py
examples/structured_outputs/chat/: run.py
examples/structured_outputs/core/: run.py
examples/structured_outputs/playground/: repl.py  run.py  types.py  utils.py
examples/structured_outputs/strategies/: anthropic_pydantic.py  llm_json_object.py  (+2 more)
examples/swarm_team_basic/: run.py
liteswarm/: __init__.py  exceptions.py  logging.py  repl.py  stream_handler.py  summarizer.py  swarm.py  swarm_team.py  types.py  utils.py
liteswarm/chat/: __init__.py  chat.py  memory.py  optimization.py  search.py  session.py
liteswarm/core/: __init__.py  console_handler.py  context_manager.py  event_handler.py  memory.py  message_index.py  message_store.py  stream_handler.py  summarizer.py  swarm.py  swarm_stream.py
liteswarm/experimental/: __init__.py
liteswarm/repl/: event_handler.py  repl.py  stream_handler.py
liteswarm/types/: __init__.py  chat.py  collections.py  context.py  events.py  exceptions.py  llm.py  messages.py  misc.py  result.py  swarm.py  swarm_team.py
liteswarm/utils/: __init__.py  function.py  logging.py  messages.py  misc.py  pydantic.py  retry.py  tasks.py  typing.py  unwrap.py  usage.py
(+14 files in other folders)
